--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "better-sqlite3": "^9.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "peer": "^1.0.2",
-    "peerjs": "^1.5.2"
+    "peerjs": "^1.5.2",
+    "validator": "^13.11.0"
   },
   "scripts": {
     "start": "node server.js"
