--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "better-sqlite3": "^9.4.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.3",
     "peer": "^1.0.2",
     "peerjs": "^1.5.2",
